Fixed issue with dropdown hover on smaller screens

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -52,11 +52,14 @@ nav ul li a.current{
   color:#eee;
   background-color: #407cc0;
 }
-.dropdown:hover>.dropdown-menu {
-  display: block;
-}
-.dropdown>.dropdown-toggle:active {
-  pointer-events: none;
+
+@media (min-width:999px) {
+  .dropdown:hover>.dropdown-menu {
+    display: block;
+  }
+  .dropdown>.dropdown-toggle:active {
+    pointer-events: none;
+  }
 }
 @media (max-width: 998px){
   #topnav{
